// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when logged in 1`] = `
Array [
  <HeaderLogo
    className="src-modules-header-index__logo"
    key="logo"
    size="medium"
  />,
  <MenuBar
    key="menu"
  />,
]
`;

exports[`should render correctly when narrow 1`] = `
Array [
  <HeaderLogo
    className="src-modules-header-index__logo"
    key="logo"
    size="small"
  />,
  <MenuBar
    key="menu"
  />,
]
`;

exports[`should render correctly when not logged in 1`] = `
Array [
  <HeaderLogo
    className="src-modules-header-index__logo"
    key="logo"
    size="medium"
  />,
  <MenuBar
    key="menu"
  />,
]
`;

exports[`should render correctly when showing the sidenav 1`] = `
Array [
  <HeaderLogo
    className="src-modules-header-index__logo"
    key="logo"
    size="medium"
  />,
  <MenuBar
    key="menu"
  />,
]
`;
